[gd_scene load_steps=3 format=3 uid="uid://c0lu6xuvw4n0n"]

[ext_resource type="Script" uid="uid://bcgm78kevdjx3" path="res://Scripts/PainelFuncionario.gd" id="1_ffxwa"]
[ext_resource type="Texture2D" uid="uid://jk0exjrfod4x" path="res://PlaceHolders/salim.png" id="2_nfeuk"]

[node name="ColorRect" type="Button"]
custom_minimum_size = Vector2(0, 100)
offset_right = 446.0
offset_bottom = 100.0
script = ExtResource("1_ffxwa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FotoFuncionario" type="TextureRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_nfeuk")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 13
alignment = 1

[node name="LabelNome" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Nome do funcionário"

[node name="LabelFunction" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Função"
